2007-10-02  Ethan Merritt  <merritt@u.washington.edu>

	* src/binary.c src/binary.h src/bf_test.c: Rename the routine vector()
	to alloc_vector().  This avoids a conflict with the "vector" keyword on
	PowerPC OSX with Altivec compiler options enabled.
	Bug #1754164

2007-10-01  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (bound_intersect):  Fix a degenerate case in the
	intersection test that caused a divide by zero.
	Bug #1805697

2007-09-29  Hanno Hoffstadt  <hannoh@users.sourceforge.net>

	* term/Postscript/prologue.ps: Add an explicit 'closepath' before
	filling a rectangle. This is not required by the language spec, but
	works around a bug in Adobe Distiller 7 and Apple's Quartz Preview.
	Bug #1771533

2007-09-28  Hanno Hoffstadt  <hannoh@users.sourceforge.net>

	* src/graphics.c (do_plot):  It is necessary to call
	term->previous_palette() at the end of any 2D plot or 3D plot
	that used custom rgb colors.
	Bug #1803337

2007-09-23  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.c (gen_tics): On log scale plots with very large range,
	the minitic interval can overflow integer representation.
	Bug #1797500

	* term/gd.trm (PNG_image):  gdImageGetClip was introduced in libgd
	version 2.0.12.  Don't try to use it if version is less than 2.
	Bug #1790171

2007-09-01  Ethan Merritt  <merritt@u.washington.edu>

	Tag version 4.2.2 using command
		cvs tag -c "Release_4_2_2"
	
	Version 4.2.2 released via SourceForge.  Any further commits to
	this tree will be in 4.2.3 if such a version is ever released.

2007-08-31  Ethan Merritt  <merritt@u.washington.edu>

	The axis label bug is serious enough to warrant an updated release
	IMHO.  Obviously the release candidate for 4.2.1 didn't get enough
	testing.

	src/version.c PATCHLEVEL configure.in docs/titlepag.tex
	Increment patchlevel to 2

2007-08-28  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (draw_3d_graphbox):  Fix bug that caused axis labels